--- a/image-ui.html
+++ b/image-ui.html
@@ -29,5 +29,5 @@
 </template>
 
 <template name="image">
-  <a href="{{imagePath}}" title="Banana" style="background-image: url('{{imagePath}}')"></a>
+  <a href="{{imagePath}}" title="" style="background-image: url('{{thumbPath}}')"></a>
 </template>
