add slideshow control link to toggle option on/off

--- a/client/image-ui.html
+++ b/client/image-ui.html
@@ -12,6 +12,9 @@
       <h3 class="title"></h3>
       <a class="prev">‹</a>
       <a class="next">›</a>
+      <a class="control">
+        {{#if hasControl}}&#9734;{{else}}&#9733;{{/if}}
+      </a>
       <a class="close">×</a>
       <a class="play-pause"></a>
       <ol class="indicator"></ol>
