add basic question / answer auth for galleries

--- a/client/image-ui.html
+++ b/client/image-ui.html
@@ -13,26 +13,41 @@
 </template>
 
 <template name="Gallery">
-  <div id="blueimp-gallery" class="blueimp-gallery">
-      <div class="slides"></div>
-      <h3 class="title"></h3>
-      <a class="prev">‹</a>
-      <a class="next">›</a>
-      <a class="control">
-        {{#if hasControl}}&#9733;{{else}}&#9734;{{/if}}
-      </a>
-      <a class="close">×</a>
-      <a class="play-pause"></a>
-      <ol class="indicator"></ol>
-  </div>
+  {{#if question}}
+    {{> Question question}}
+  {{else}}
+    <div id="blueimp-gallery" class="blueimp-gallery">
+        <div class="slides"></div>
+        <h3 class="title"></h3>
+        <a class="prev">‹</a>
+        <a class="next">›</a>
+        <a class="control">
+          {{#if hasControl}}&#9733;{{else}}&#9734;{{/if}}
+        </a>
+        <a class="close">×</a>
+        <a class="play-pause"></a>
+        <ol class="indicator"></ol>
+    </div>
 
-  <div id="links" class="links">
-    {{#each images}}
-      {{> Image this}}
-    {{/each}}
-  </div>
+    <div id="links" class="links">
+      {{#each images}}
+        {{> Image this}}
+      {{/each}}
+    </div>
+  {{/if}}
 </template>
 
 <template name="Image">
   <a href="{{imagePath}}" title="" style="background-image: url('{{thumbPath}}')"></a>
+</template>
+
+<template name="Question">
+  <div class="qa">
+    <form>
+      <div class="question">{{this}}</div>
+      <div class="answer">
+        <input type="text" placeholder="Enter your answer here" />
+      </div>
+    </form>
+  </div>
 </template>
