add colour to indicate wrong answer

--- a/client/image-ui.html
+++ b/client/image-ui.html
@@ -45,7 +45,7 @@
   <div class="qa">
     <form>
       <div class="question">{{this}}</div>
-      <div class="answer">
+      <div class="answer {{cls}}">
         <input type="text" placeholder="Enter your answer here" />
       </div>
     </form>
