remove placeholder for answer, fix styling and downcase answers when checking

--- a/client/image-ui.html
+++ b/client/image-ui.html
@@ -46,7 +46,7 @@
     <form>
       <div class="question">{{this}}</div>
       <div class="answer {{cls}}">
-        <input type="text" placeholder="Enter your answer here" />
+        <input type="text" />
       </div>
     </form>
   </div>
