--- a/client/image-ui.html
+++ b/client/image-ui.html
@@ -7,9 +7,16 @@
 <template name="Home">
   <section class="banner">
     <h1>A place for photos</h1>
+    {{#each galleries}}
+      {{> GalleryLink this}}
+    {{/each}}
     <div class="background-image">
     </div>
   </section>
+</template>
+
+<template name="GalleryLink">
+  <a href="{{_id}}" class="gallery-link">{{name}}</a>
 </template>
 
 <template name="Gallery">
