disable slideshow until working for multiple galleries, add fade in for gallery links and fix timers for qa

--- a/client/image-ui.html
+++ b/client/image-ui.html
@@ -15,7 +15,7 @@
 </template>
 
 <template name="GalleryLink">
-  <a href="{{_id}}" class="gallery-link">{{name}}</a>
+  <a href="{{_id}}" class="gallery-link {{linkCls}}">{{name}}</a>
 </template>
 
 <template name="Gallery">
